# oauthclientbridge

./: .build-overrides  .env.example  .gitignore  .travis.yml  .version-override  AGENTS.md  MANIFEST.in  README.md  README.rst  flake.nix  oauthclientbridge.py  otel-collector-config.yaml  pyproject.toml  pytest.ini  renovate.json  sample_config.py  schema.sql  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: apply-rulesets.sh
.github/rulesets/: branch-main.json  tag-v.json
.github/workflows/: ci.yml  cleanup.yml  lock.yml
.opencode/: AGENTS.md
deploy/: README.md  config.alloy  oauthclientbridge.container  oauthclientbridge.env.example  upgrade.sh
deploy/soundcloud/: callback.html  container  env
deploy/spotify/: callback.html  container  env
oauthclientbridge/: __init__.py  cli.py  compat.py  crypto.py  db.py  default_settings.py  errors.py  logging.py  oauth.py  rate_limit.py  stats.py  views.py
src/oauthclientbridge/: __init__.py  cli.py  client.py  coalescing.py  compat.py  crypto.py  db.py  default_settings.py  errors.py  logging.py  logs.py  models.py  oauth.py  resource_labels.py  schema.sql  sentry.py  settings.py  stats.py  telemetry.py  types.py  utils.py  views.py  wsgi.py
src/oauthclientbridge/oauth/: __init__.py  _core.py  _outcome.py  _retry.py  core.py  outcome.py  retry.py
src/oauthclientbridge/telemetry/: __init__.py  _buckets.py  _otel.py  _prometheus.py  _refresh.py  _resources.py  _sentry.py  metrics.py  traces.py
src/oauthclientbridge/testing/: __init__.py  otel.py
src/oauthclientbridge/utils/: __init__.py  bucket.py  coalescing.py  http.py  time.py  uri.py
src/pytest_otel_capture/: __init__.py  _helpers.py  _mocker.py
src/pytest_sentry_capture/: __init__.py  plugin.py
tests/: authorize_test.py  bucket_test.py  client_test.py  coalescing_test.py  conftest.py  crypto_test.py  db_test.py  deploy_upgrade_test.py  logs_test.py  metrics_test.py  oauth_outcome_test.py  oauth_retry_test.py  oauth_test.py  otel_mocker.py  proxy_test.py  sentry_test.py  settings_test.py  telemetry_test.py  token_test.py  utils_test.py
tests/oauth/: conftest.py  oauth_outcome_test.py  oauth_retry_test.py  oauth_test.py
tests/otel/: __init__.py  helpers.py
tests/plugins/: __init__.py  sentry_test.py
tests/plugins/otel/: __init__.py  helpers.py  mocker.py  plugin.py  plugin_test.py
tests/plugins/sentry/: __init__.py  plugin.py  plugin_test.py
tests/sentry/: mocker.py  plugin.py
typings/opentelemetry/instrumentation/flask/: __init__.pyi
typings/opentelemetry/instrumentation/logging/: __init__.pyi
typings/opentelemetry/instrumentation/propagators/: __init__.pyi
