[project]
name = "oauthclientbridge"
description = "Bridge OAuth2 Authorization Code Grants to Clients Grants"
readme = "README.md"
requires-python = "<3.13,>=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Thomas Adamcik", email = "thomas@adamcik.no" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "Flask==3.1.3",
  "cryptography==46.0.7",
  "opentelemetry-api==1.36.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.36.0",
  "opentelemetry-exporter-otlp==1.36.0",
  "opentelemetry-instrumentation-flask==0.57b0",
  "opentelemetry-instrumentation-logging==0.57b0",
  "opentelemetry-instrumentation-requests==0.57b0",
  "opentelemetry-instrumentation-sqlite3==0.57b0",
  "opentelemetry-instrumentation-system-metrics==0.57b0",
  "opentelemetry-sdk==1.36.0",
  "prometheus-client==0.25.0",
  "pydantic-settings==2.13.1",
  "pydantic==2.13.1",
  "requests==2.33.1",
  "structlog==25.5.0",
  "werkzeug==3.1.8",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/adamcik/oauthclientbridge"

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "typing" },
  { include-group = "lint" },
  { include-group = "sentry" },
]
lint = ["ruff==0.12.12"]
sentry = ["sentry-sdk[opentelemetry]==2.33.2", "structlog-sentry==2.2.1"]
test = [
  "pytest",
  "pytest-cov",
  "requests_mock",
  "pytest-freezer",
  { include-group = "sentry" },
]
typing = [
  "types-requests",
  "basedpyright==1.39.1",
  { include-group = "sentry" },
]

[build-system]
requires = ["hatch-vcs==0.5.0", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-local-folder = ["src"]

[tool.uv]
required-version = ">=0.7.20"
