[project]
name = "oauthclientbridge"
description = "Bridge OAuth2 Authorization Code Grants to Clients Grants"
readme = "README.md"
requires-python = "<3.13,>=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Thomas Adamcik", email = "thomas@adamcik.no" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "Flask==3.1.3",
  "cryptography==48.0.0",
  "opentelemetry-api==1.41.1",
  "opentelemetry-exporter-otlp==1.41.1",
  "opentelemetry-exporter-otlp-proto-grpc==1.41.1",
  "opentelemetry-instrumentation-flask==0.62b1",
  "opentelemetry-instrumentation-logging==0.62b1",
  "opentelemetry-instrumentation-requests==0.62b1",
  "opentelemetry-instrumentation-sqlite3==0.62b1",
  "opentelemetry-instrumentation-system-metrics==0.62b1",
  "opentelemetry-sdk==1.41.1",
  "prometheus-client==0.25.0",
  "pydantic==2.13.3",
  "pydantic-settings==2.14.0",
  "requests==2.33.1",
  "structlog==25.5.0",
  "werkzeug==3.1.8",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/adamcik/oauthclientbridge"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "sentry" },
  { include-group = "test" },
  { include-group = "typing" },
]
lint = ["ruff==0.15.12"]
sentry = ["sentry-sdk[opentelemetry]==2.58.0", "structlog-sentry==2.2.1"]
test = [
  "pytest",
  "pytest-cov",
  "pytest-freezer",
  "requests_mock",
  { include-group = "sentry" },
]
typing = [
  "basedpyright==1.39.3",
  "types-requests",
  { include-group = "sentry" },
]

[build-system]
requires = ["hatch-vcs==0.5.0", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-local-folder = ["src"]

[tool.uv]
required-version = ">=0.7.20"
