[project]
name = "oauthclientbridge"
description = "Bridge OAuth2 Authorization Code Grants to Clients Grants"
readme = "README.md"
requires-python = "<3.13,>=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Thomas Adamcik", email = "thomas@adamcik.no" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "Flask==3.1.3",
  "cryptography==49.0.0",
  "opentelemetry-api==1.43.0",
  "opentelemetry-exporter-otlp-proto-http==1.43.0",
  "opentelemetry-instrumentation-flask==0.64b0",
  "opentelemetry-instrumentation-logging==0.64b0",
  "opentelemetry-instrumentation-requests==0.64b0",
  "opentelemetry-instrumentation-sqlite3==0.64b0",
  "opentelemetry-instrumentation-system-metrics==0.64b0",
  "opentelemetry-sdk==1.43.0",
  "prometheus-client==0.25.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "requests==2.34.2",
  "structlog==26.1.0",
  "werkzeug==3.1.8",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/adamcik/oauthclientbridge"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "sentry" },
  { include-group = "test" },
  { include-group = "typing" },
]
lint = ["ruff==0.15.20"]
sentry = ["sentry-sdk[opentelemetry]==2.64.0", "structlog-sentry==2.2.1"]
test = [
  "pytest",
  "pytest-cov",
  "pytest-freezer",
  "requests_mock",
  { include-group = "sentry" },
]
typing = [
  "basedpyright==1.39.9",
  "types-requests",
  { include-group = "sentry" },
]

[build-system]
requires = ["hatch-vcs==0.5.0", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
  "src/oauthclientbridge",
  "src/pytest_otel_capture",
  "src/pytest_sentry_capture",
]

[tool.pyright]
include = ["src/oauthclientbridge"]
stubPath = "typings"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-local-folder = ["src"]

[tool.uv]
required-version = ">=0.7.20"
