[metadata]
name = OAuth-Client-Bridge
version = 1.3.0
url = https://github.com/adamcik/oauthclientbridge
author = Thomas Adamcik
author_email = thomas@adamcik.no
license = Apache License, Version 2.0
description = Bridge OAuth2 Authorization Code Grants to Clients Grants.
long_description = file: README.rst

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    cryptography
    Flask>=0.11
    pyprometheus
    requests

[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-import-order
release =
    twine
    wheel
test =
    pytest
    pytest-cov
    requests_mock
dev =
    %(lint)s
    %(release)s
    %(test)s

[options.packages.find]
exclude =
    tests
    tests.*

[bdist_wheel]
universal = 1

[flake8]
application-import-names = oauthclientbridge, tests
exclude = .git, .tox, build
max-line-length = 80
