[metadata]
name = OAuth-Client-Bridge
version = 1.4.0
url = https://github.com/adamcik/oauthclientbridge
author = Thomas Adamcik
author_email = thomas@adamcik.no
license = Apache License, Version 2.0
description = Bridge OAuth2 Authorization Code Grants to Clients Grants.
long_description = file: README.rst

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    cryptography
    Flask>=0.11
    pyprometheus
    requests

[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-import-order
release =
    twine
    wheel
test =
    pytest
    pytest-cov
    requests_mock
dev =
    %(lint)s
    %(release)s
    %(test)s

[options.packages.find]
exclude =
    tests
    tests.*

[bdist_wheel]
universal = 1

[flake8]
application-import-names = oauthclientbridge, tests
max-line-length = 80
exclude = .git, .tox, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
    # B305: .next() is not a thing on Python 3 (used by playback controller)
    B305
